--- a/src/header/components/css/validation.css
+++ b/src/header/components/css/validation.css
@@ -2,4 +2,20 @@
     color: red;
     font-size: 12px;
     text-align: center;
+    position: absolute;
+    transform: scale(1.05);
+    transition: transform 0.25s ease-out;
+    margin-left: 2%;
+}
+
+.successMsg{
+    position: relative;
+    width: 100%;
+    text-align: center;
+    display: flex;
+}
+
+.successMsg > span{
+    position: absolute;
+    width: 100%;
 }
