--- a/src/header/components/css/validation.css
+++ b/src/header/components/css/validation.css
@@ -7,6 +7,14 @@
     transition: transform 0.25s ease-out;
     margin-left: 2%;
 }
+.errorLogin{
+    color: red;
+    font-size: 12px;
+    text-align: center;
+    transform: scale(1.05);
+    transition: transform 0.25s ease-out;
+
+}
 
 .successMsg{
     position: relative;
