form one begining

--- a/src/pages/create_projects/css/create_project.css
+++ b/src/pages/create_projects/css/create_project.css
@@ -30,3 +30,10 @@
     color: #f37a22!important;
     border: #eeeeee;
 }
+
+.msg-complete-profile{
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 20px;
+    color: red;
+}
