add tinymce editor text

--- a/src/pages/create_projects/css/create_project.css
+++ b/src/pages/create_projects/css/create_project.css
@@ -1,39 +1,43 @@
-.title-create{
-    color: #1e84c6;
-    margin-top: 5%;
+.title-create {
+  color: #1e84c6;
+  margin-top: 5%;
 }
-.h5-center > h5{
-    text-align: center;
-}
-
-.title-create-sub{
-    color: #9a9a9a;
-    margin-top: 4%;
-}
-.h5-center_btn{
-    margin-top: 5%;
-    text-align: center;
-    margin-bottom: 10%;
-}
-.h5-center_btn > a{
-    color: #eeeeee!important;
-    font-weight: bold;
-    border-radius: 0px;
-}
-.btn-want{
-    background-color: #f37a22;
-    color: #eeeeee;
-    border-color: #f37a22;
-}
-.btn-want:hover{
-    background-color: #eeeeee;
-    color: #f37a22!important;
-    border: #eeeeee;
+.h5-center > h5 {
+  text-align: center;
 }
 
-.msg-complete-profile{
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 20px;
-    color: red;
+.title-create-sub {
+  color: #9a9a9a;
+  margin-top: 4%;
+}
+.h5-center_btn {
+  margin-top: 5%;
+  text-align: center;
+  margin-bottom: 10%;
+}
+.h5-center_btn > a {
+  color: #eeeeee !important;
+  font-weight: bold;
+  border-radius: 0px;
+}
+.btn-want {
+  background-color: #f37a22;
+  color: #eeeeee;
+  border-color: #f37a22;
+}
+.btn-want:hover {
+  background-color: #eeeeee;
+  color: #f37a22 !important;
+  border: #eeeeee;
+}
+
+.msg-complete-profile {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 20px;
+  color: red;
+}
+
+.tox-notifications-container {
+  display: none !important;
 }
