add first and second part of project ended

--- a/src/pages/create_projects/css/create_project.css
+++ b/src/pages/create_projects/css/create_project.css
@@ -48,3 +48,8 @@
 .tox-tinymce {
   margin-top: 15px !important;
 }
+.MsgSuccess {
+  color: #1e84c6;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
