--- a/src/pages/create_projects/css/create_project.css
+++ b/src/pages/create_projects/css/create_project.css
@@ -53,3 +53,50 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
+.FilteredMultiSelect__filter {
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  background-color: #eeeeef;
+  border-bottom: 1px solid #f37a22 !important;
+  border-radius: 0px !important;
+  border-top: 0px solid #eeeeef !important;
+  border-left: 0px solid #eeeeef !important;
+  border-right: 0px solid #eeeeef !important;
+}
+
+.FilteredMultiSelect__select {
+  width: 100%;
+  margin-bottom: 10px;
+  background-color: #eeeeef;
+  border-bottom: 1px solid #f37a22 !important;
+  border-radius: 0px !important;
+  border-top: 0px solid #eeeeef !important;
+  border-left: 0px solid #eeeeef !important;
+  border-right: 0px solid #eeeeef !important;
+}
+.FilteredMultiSelect__button {
+  color: #fff !important;
+  background-color: #007bff !important;
+  border-color: #007bff !important;
+  border-radius: 0.25rem !important;
+  margin-bottom: 15px;
+  padding: 5px 10px !important;
+}
+.FilteredMultiSelect {
+  margin-top: 4%;
+  margin-bottom: 10px;
+}
+.FilteredMultiSelect__button:hover {
+  cursor: pointer;
+}
+.btn-remove {
+  background-color: #f37a22;
+  padding: 2px 10px;
+  border-radius: 0.2rem;
+  color: #ffffff;
+}
+.list-tags > li {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
