add new ip server, add update campaing

--- a/src/pages/create_projects/css/create_project.css
+++ b/src/pages/create_projects/css/create_project.css
@@ -100,3 +100,12 @@
   margin-top: 5px;
   margin-bottom: 5px;
 }
+.btn-link {
+  color: #ffffff !important;
+}
+.btn-link:hover {
+  text-decoration: none;
+}
+.link-profile {
+  color: #f37a22 !important;
+}
