reward almost finish

--- a/src/pages/update_projects/css/update_project.css
+++ b/src/pages/update_projects/css/update_project.css
@@ -13,3 +13,11 @@
 .table th {
   text-align: center;
 }
+
+.react-datepicker-wrapper {
+  width: 100%;
+}
+
+.react-datepicker-popper {
+  z-index: 100 !important;
+}
