--- a/src/pages/update_projects/css/update_project.css
+++ b/src/pages/update_projects/css/update_project.css
@@ -21,3 +21,20 @@
 .react-datepicker-popper {
   z-index: 100 !important;
 }
+.fadeOut {
+  opacity: 0;
+  width: 0;
+  height: 0;
+  transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s;
+}
+.fadeIn {
+  opacity: 1;
+  width: auto;
+  height: 40px;
+  transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
+}
+.form-sub-warning {
+  color: red;
+  font-weight: bold;
+  font-size: 12px;
+}
